Issue #1 - use Merriweather for headings - aligned the paragraphs better

--- a/EvansDiary.Web/Content/style.less
+++ b/EvansDiary.Web/Content/style.less
@@ -1,8 +1,10 @@
-﻿@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,300italic|Merriweather:400|Permanent+Marker:400|PT+Serif:400);
+﻿@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,300italic|Merriweather:400italic|Permanent+Marker:400|PT+Serif:400);
 @import "styling/_variables";
 
 p {
   text-align: justify;
+  font-size: 1em;
+  line-height: 1.6em;
 }
 
 .logo {
@@ -100,10 +102,6 @@ h1 {
 }
 
 .diary-entry {
-  p {
-    line-height: 25px;
-  }
-
   aside {
     padding: 1em 0.5em;
     color: white;
